# WAVES

./: .gitignore  AGENTS.md  PLAN.md  README.md  README.zh.md  pyproject.toml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-scaffold-install.txt  task-2-parser-fixture.txt  task-2-parser-missing-file.txt  task-2-parser-transitions.txt  task-3-query-errors.txt  task-3-query-happy.txt  task-4-no-network.txt  task-4-server-import.txt  task-4-tool-error.txt  task-5-smoke-error.txt  task-5-smoke-pass.txt
.sisyphus/notepads/waves-v1-mcp/: decisions.md  learnings.md
.sisyphus/plans/: waves-v1-mcp.md
src/waves/: __init__.py  query.py  server.py  vcd_parser.py
src/waves.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_smoke.py
tests/fixtures/: sample.vcd  simple.vcd  values.vcd
